   between multiple user agents. When set, for directmedia reinvites,
   Asterisk will not send an immediate reinvite on an incoming call leg. This
   option is useful when peered with another SIP user agent that is known to
   send immediate direct media reinvites upon call establishment.

 * Add support for WebSocket transport. This can be configured using 'ws' or 'wss'
   as the transport.

 * When a MESSAGE request is received, the address the request was received from
   is now saved in the SIP_RECVADDR variable.

 * Add ANI2/OLI parsing for SIP.  The "From" header in INVITE requests is now
   parsed for the presence of "isup-oli", "ss7-oli", or "oli" tags.  If present,
   the ANI2/OLI information is set on the channel, which can be retrieved using
   the CALLERID function.

 * Peers can now be configured to support negotiation of ICE candidates using
   the setting icesupport.  See res_rtp_asterisk changes for more information.

 * Added support for format attribute negotiation.  See the Codecs changes for
   more information.


chan_skinny
------------------
 * Added skinny version 17 protocol support.


chan_unistim
--------------------
 * Added ability to use multiple lines for a single phone.  This allows multiple
   calls to occur on a single phone, using callwaiting and switching between calls.

 * Added option 'sharpdial' allowing end dialing by pressing # key

 * Added option 'interdigit_timer' to control phone dial timeout

 * Added options 'cwstyle', 'cwvolume' controlling callwaiting appearance

 * Added global 'debug' option, that enables debug in channel driver

 * Added ability to translate on-screen menu in multiple languages. Tested on
   Russian languages.  Supported encodings: ISO 8859-1, ISO 8859-2, ISO 8859-4, 
   ISO 8859-5, ISO 2022-JP. Language controlled by 'language' and on-screen 
   menu of phone

 * In addition to English added French and Russian languages for on-screen menus
